--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,21 +94,37 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* consolidated lead, brand, and cost classes */
+.benefit-child {
     margin-bottom: 32px;
-    /*used variable from root*/
+    color: white;
+}
+
+/* consolidated lead, brand, and cost classes */
+.benefit-child h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/* consolidated lead, brand, and cost classes */
+.benefit-child img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/*.benefit-lead {
+    margin-bottom: 32px;
     color: white;
 }
 
 .benefit-brand {
     margin-bottom: 32px;
-    /*used variable from root*/
     color: white;
 }
 
 .benefit-cost {
     margin-bottom: 32px;
-    /*used variable from root*/
     color: white;
 }
 
@@ -143,7 +159,7 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+}*/
 
 .search-engine-optimization {
     margin-bottom: 20px;
