--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ p {
 /* consolidated lead, brand, and cost classes */
 .benefit-child {
     margin-bottom: 32px;
+    /*used variable from root*/
     color: white;
 }
 
@@ -113,54 +114,6 @@ p {
     max-width: 150px;
 }
 
-/*.benefit-lead {
-    margin-bottom: 32px;
-    color: white;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: white;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: white;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}*/
-
 .SEO-ORM-SMM {
     margin-bottom: 20px;
     padding: 50px;
@@ -172,50 +125,14 @@ p {
     color: white;
 }
 
-/* .online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: blue;
-    color: white;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: blue;
-    color: white;
-} */
-
 .SEO-ORM-SMM img {
     max-height: 200px;
 }
-
-/* .online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-} */
 
 .SEO-ORM-SMM h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-/* .online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 .footer {
     padding: 30px;
